--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 17vh;
+    background-color: lightgray;
 }
 
 .nav-link {
@@ -52,14 +53,12 @@ nav {
 a {
     color: black;
     text-decoration: none;
-    text-decoration-color: white;
 }
 
 a:hover {
     color: grey;
     text-decoration: underline;
-    text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181);
+    text-underline-offset: 0.3rem;
 }
 
 .logo {
